[package]
name = "Factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.30.2"
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types= "0.1.5"





ic-ledger-types= "0.11.0"
mint-cycles = "0.1.0"
serde = "1.0.132"
